.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Confidential__c.object
<CustomObject>
    <description>Used to record Employee confidential information and documents</description>
    <fields>
        <fullName>xcdhcm__Employee_Relations_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Relations Review</label>
        <referenceTo>xcdhcm__Employee_Relations_Review__c</referenceTo>
        <relationshipLabel>Confidentials</relationshipLabel>
        <relationshipName>Confidentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipLabel>Confidentials</relationshipLabel>
        <relationshipName>Confidentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Health_and_Safety__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Health and Safety</label>
        <referenceTo>xcdhcm__Health_and_Safety__c</referenceTo>
        <relationshipLabel>Confidentials</relationshipLabel>
        <relationshipName>Confidentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Occupational_Health__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Occupational Health</label>
        <referenceTo>xcdhcm__Occupational_Health__c</referenceTo>
        <relationshipLabel>Confidentials</relationshipLabel>
        <relationshipName>Confidentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Confidential</label>
    <nameField>
        <displayFormat>CNF -{0000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Confidential</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>